tests/neg-custom-args/captures/capset-members3.scala
import language.experimental.captureChecking
import caps.*

trait Foo:
  type C^ _ // error

